Templates Module - Add Funtionality
I finish the all functionaility of templates module.

--- a/frontend/src/app/email/email-templates/template/template.component.html
+++ b/frontend/src/app/email/email-templates/template/template.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="mb-3">
       <button type="submit" class="btn btn-success mr-2" [disabled]="!isFormValid">{{ btnAccept }}</button>
-      <a [routerLink]="['/', 'emails', 'templates', 'list', 'templates']" routerLinkActive="active"
+      <a [routerLink]="['/', 'email', 'templates', 'list', 'templates']" routerLinkActive="active"
         class="btn btn-primary">Cancel</a>
     </div>
   </form>
